fix(mobile styles): centers content on mobile and resizes across devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ body {
 
 .content-box.last {
   margin-top: auto;
+  margin-bottom: 2vh;
 }
 
 .content-box.carousel .header {
@@ -209,10 +210,11 @@ a:hover {
   }
 }
 
-@media only screen and (max-width: 481px) {
+@media only screen and (max-width: 650px) {
 
-  .content-box {
-    width: 250px;
+  .container {
+    width: 90%;
+    min-width: 290px;
     font-size: 16px;
   }
 
